# cmake_study

./: .gitignore  CmakeLists.txt  a.out  main  main.cpp  static_function.cpp
add_definitions/: CMakeLists.txt  README.md  main.cpp
add_definitions/lib/: CMakeLists.txt  testlib.cpp  testlib.h
core/: CmakeLists.txt  hello.cpp  hello.h
lib/: CmakeLists.txt
lib/include/: Timer.hpp  Worker.hpp
lib/src/: Timer.cpp  Worker.cpp
modern_cmake/: CMakeLists.txt  main.cpp
modern_cmake/source/: CMakeLists.txt
modern_cmake/source/include/: simple_lib.h
modern_cmake/source/src/: simple_lib.cpp
set/: CMakeLists.txt  README.md  main.cpp
variables/: CMakeLists.txt
